# protin

./: .env.example  Caddyfile  LICENSE  docker-compose.yml
.github/workflows/: container_image.yaml
docs/: openapi.yaml
protin-backend/: Cargo.toml  Dockerfile
protin-backend/migrations/2023-01-01-110741_create_pastes/: up.sql
protin-backend/migrations/2023-01-02-180727_alter_pk_pastes/: down.sql  up.sql
protin-backend/src/: bucket.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  s3.rs  schema.rs
protin-backend/src/paste/: db.rs  mod.rs
protin-frontend/: .gitignore  .prettierrc  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
protin-frontend/app/: app.css  root.tsx  routes.ts
protin-frontend/app/components/: button.tsx  header.tsx  linenum.tsx  loader.tsx  navbar.tsx
protin-frontend/app/providers/: toolbar.tsx
protin-frontend/app/routes/: editor.tsx  home.tsx  paste.tsx
protin-frontend/src/app/: layout.tsx  page.tsx
protin-frontend/src/components/: CodeBlock.tsx  NavBar.tsx
protin-frontend/src/pages/: _app.tsx
