[package]
name = "protin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-easy-multipart = "3.0.0"
actix-web = "4.2.1"
anyhow = "1.0.68"
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", default-features = false, features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
