[package]
name = "protin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-easy-multipart = "3.0.0"
actix-web = "4.9.0"
anyhow = "1.0.86"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.46.0"
diesel = { version = "2.2.3", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", default-features = false, features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
