[package]
name = "protin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-easy-multipart = "3.0.0"
actix-web = "4.10.0"
anyhow = "1.0.98"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
diesel = { version = "2.2.9", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", default-features = false, features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
